gcc/testsuite/g++.dg/coroutines/co-return-syntax-01-outside-fn.C
//  { dg-additional-options "-fsyntax-only -w" }

#include "coro.h"

co_return; // { dg-error {expected unqualified-id before 'co_return'} }

